[package]
name = "ambition_characters"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Unified actor system for Ambition: actor control/AI vocabulary + the universal brain (player, NPC, enemy, boss) + the character catalog. Bosses are actors (ADR 0016)."

[dependencies]
ambition_engine_core = { path = "../ambition_engine_core" }
ambition_input = { path = "../ambition_input" }
bevy = { version = "0.18.1", default-features = false, features = ["bevy_log"] }
ron = "0.11"
serde = { version = "1", features = ["derive"] }
