[package]
name = "ambition_combat"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Reusable, content-free combat MODEL: Damage / Hitbox / Hurtbox / DamageVolume, the AttackIntent / AttackPhase / AttackSpec attack vocabulary + intent resolution, and the action-slot kinds. Pure logic over the actor + geometry foundations; the game's ECS combat systems consume it. Extracted from ambition_gameplay_core."

[lib]
crate-type = ["rlib"]

[dependencies]
# Actor faction / damage-team / kinematic-path + the brain MeleeActionSpec the
# attack specs reference.
ambition_characters = { path = "../ambition_characters" }
# Geometry (Vec2 / Aabb / AabbExt).
ambition_engine_core = { path = "../ambition_engine_core" }
# One Resource derive (the slot registry); ECS surface only.
bevy = { version = "0.18.1", default-features = false }
