[package]
name = "ambition_combat"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Reusable, content-free combat MODEL: Damage / Hitbox / Hurtbox / DamageVolume, the AttackIntent / AttackPhase / AttackSpec attack vocabulary + intent resolution, and the action-slot kinds. Pure logic over the actor + geometry foundations; the game's ECS combat systems consume it. Extracted from ambition_gameplay_core."

[lib]
crate-type = ["rlib"]

[dependencies]
# The brain MeleeActionSpec the attack specs reference.
ambition_characters = { path = "../ambition_characters" }
# Geometry (Vec2 / Aabb / AabbExt / KinematicPath).
ambition_engine_core = { path = "../ambition_engine_core" }
# Tier-0 authored-placement schema: DamageKind / DamageTeam / HazardRespawn.
ambition_entity_catalog = { path = "../ambition_entity_catalog" }
# The moved combat kit (E2): lifecycle/gravity markers, breakable payloads,
# effect messages, and the shared sim clock.
ambition_interaction = { path = "../ambition_interaction" }
ambition_platformer_primitives = { path = "../ambition_platformer_primitives" }
ambition_sfx = { path = "../ambition_sfx" }
ambition_time = { path = "../ambition_time" }
ambition_vfx = { path = "../ambition_vfx" }
# Authored-hazard serde (the room-IR ron-room bake carries DamageVolume).
serde = { version = "1", features = ["derive"] }
# One Resource derive (the slot registry); ECS surface only.
bevy = { version = "0.18.1", default-features = false }
