[package]
name = "ambition_content"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Ambition's named game content: quests, bosses, items, dialogue, intro, banter."

[features]
default = []
# Forwarders: the cfg(feature = "...") gates inside this crate's code key off
# OUR feature names; each forwards to the matching ambition_gameplay_core machinery
# feature so a mismatched combination is a compile error, never a silent
# missing-registration.
portal = ["ambition_gameplay_core/portal"]
portal_render = ["portal", "ambition_gameplay_core/portal_render"]
ui = ["ambition_gameplay_core/ui", "dep:bevy_yarnspinner"]
audio = ["ambition_gameplay_core/audio", "dep:ambition_audio"]
# Embed the LDtk world JSON into the binary (web / Android / bundled builds
# + the desktop disk-failure fallback). Forwards to the machinery feature so
# the loader's embedded paths light up together.
static_map = ["ambition_gameplay_core/static_map"]
# The falling-sand prototype room (bridges bevy_falling_sand into the
# movement world). Off by default; the room plugin self-gates on its
# authored room at runtime.
falling_sand = ["dep:bevy_falling_sand"]

[dependencies]
# Baseline machinery features: the sandbox lib was never built fully bare
# (ldtk/input/portal code is not end-to-end cfg-gated), so the content crate
# pins the same always-on baseline every persona used pre-split.
ambition_gameplay_core = { path = "../ambition_gameplay_core", default-features = false, features = [
    "ldtk_runtime",
    "input",
    "portal",
] }
ambition_render = { path = "../ambition_render" }
ambition_cutscene = { path = "../ambition_cutscene" }
ambition_asset_manager = { path = "../ambition_asset_manager", features = ["bevy", "sfx"] }
ambition_sfx = { path = "../ambition_sfx" }
ambition_vfx = { path = "../ambition_vfx" }
ambition_time = { path = "../ambition_time" }
ambition_audio = { path = "../ambition_audio", optional = true }
ambition_platformer_primitives = { path = "../ambition_platformer_primitives" }
ambition_input = { path = "../ambition_input" }
ambition_engine_core = { path = "../ambition_engine_core" }
ambition_entity_catalog = { path = "../ambition_entity_catalog" }
ambition_characters = { path = "../ambition_characters" }
ambition_persistence = { path = "../ambition_persistence" }
ambition_interaction = { path = "../ambition_interaction" }
bevy = { version = "0.18.1", default-features = false, features = ["ui_api"] }
bevy_yarnspinner = { version = "0.8", optional = true }
# Drop bevy_falling_sand's default `physics` feature: it bundles its OWN
# avian2d `PhysicsPlugins`, which collides with Ambition's `AmbitionPhysicsPlugin`
# ("plugin already added" panic when the falling_sand feature is on). Ambition
# bridges particles into its own movement world (project_particles_to_movement_world),
# not avian rigid bodies, so it only needs render/movement/reactions.
bevy_falling_sand = { version = "0.7.0", optional = true, default-features = false, features = [
    "render",
    "movement",
    "reactions",
] }
serde = { version = "1", features = ["derive"] }
ron = "0.11"
serde_json = "1"

[dev-dependencies]
insta = { version = "1", features = ["ron"] }
# The standalone Yarn compiler (same version bevy_yarnspinner pulls) for the
# `yarn_compile` guard test — compiles the authored sources the way the
# game's asset loader would at startup.
yarnspinner = "0.8"
